--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/movieDB
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector.jar=lib/mysql-connector.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
